# multi_posture_leg_tracker

./: LICENSE  README.md
ros/evaluation_tools/annotate_rosbags_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
ros/evaluation_tools/annotate_rosbags_rviz_plugin/src/: drive_widget.cpp  drive_widget.h  teleop_panel.cpp
ros/laser_tracker/: CMakeLists.txt  README.md  package.xml
ros/laser_tracker/config/: human_detector_config.yaml  human_tracker_config.yaml  local_occupancy_grid_mapping.yaml
ros/laser_tracker/config/rviz/: laser_human_tracker.rviz
ros/laser_tracker/config/trained_model/TrainBoth/: mlpack_adaboost_0.xml  mlpack_adaboost_1.xml  mlpack_adaboost_2.xml  mlpack_adaboost_3.xml  mlpack_adaboost_4.xml  opencv_adaboost_0.yaml  opencv_adaboost_1.yaml  opencv_adaboost_2.yaml  opencv_adaboost_3.yaml  opencv_adaboost_4.yaml
ros/laser_tracker/config/trained_model/TrainIndoor_TestOutdoor/: opencv_random_forest_0.yaml  opencv_random_forest_1.yaml  opencv_random_forest_2.yaml  opencv_random_forest_3.yaml  opencv_random_forest_4.yaml
ros/laser_tracker/config/trained_model/TrainOutdoor_TestIndoor/: opencv_random_forest_0.yaml  opencv_random_forest_1.yaml  opencv_random_forest_2.yaml  opencv_random_forest_3.yaml  opencv_random_forest_4.yaml
ros/laser_tracker/include/laser_squat_leg_tracker/: cluster_features.h  laser_processor.h
ros/laser_tracker/launch/: laser_human_tracker.launch  laser_human_tracker_without_map.launch
ros/laser_tracker/launch/evaluation/: annotate_detections_laser.launch
ros/laser_tracker/launch/evaluation/tracking/: annotate_ground_truth_tracks.launch  record_estimated_tracks.launch
ros/laser_tracker/launch/training/: trainIndoor_testOutdoor.launch  trainOutdoor_testIndoor.launch  train_both_environments.launch
ros/laser_tracker/src/: human_detector_node.cpp  human_tracker_node.cpp  human_tracker_without_map_node.cpp  local_occupancy_grid_mapping_node.cpp  train_classifier_node.cpp
ros/laser_tracker/src/cluster_features/: cluster_features.cpp
ros/laser_tracker/src/human_detector_node/: human_detector.cpp  human_detector.h
ros/laser_tracker/src/human_tracker_node/: human_tracker.cpp  human_tracker.h
ros/laser_tracker/src/human_tracker_without_map_node/: human_tracker_without_map.cpp  human_tracker_without_map.h
ros/laser_tracker/src/laser_processor/: laser_processor.cpp
ros/laser_tracker/src/local_occupancy_grid_mapping_node/: local_occupancy_grid_mapping.cpp  local_occupancy_grid_mapping.h
ros/laser_tracker/src/train_classifier_node/: train_classifier.cpp  train_classifier.h
ros/leg_fusion/: CMakeLists.txt  README.md  package.xml
ros/leg_fusion/config/: track_fusion.yaml
ros/leg_fusion/config/rviz/: track_fusion.rviz
ros/leg_fusion/include/leg_fusion/: asso_exception.h  people_tracker.h  simple_tracking.h
ros/leg_fusion/launch/: startup_all.launch  track_fusion.launch
ros/leg_fusion/launch/evaluation/: annotate_ground_truth_tracks.launch  record_estimated_tracks.launch
ros/leg_fusion/src/leg_fusion/: people_tracker.cpp
ros/radar_tracker/: CMakeLists.txt  README.md  package.xml
ros/radar_tracker/config/: human_detector_config.yaml  human_tracker_config.yaml  otsu_filter_config.yaml
ros/radar_tracker/config/rviz/: radar_human_tracker.rviz
ros/radar_tracker/config/trained_model/TrainBoth/: mlpack_adaboost_1.xml  mlpack_adaboost_3.xml  mlpack_adaboost_4.xml  opencv_adaboost_1.yaml  opencv_adaboost_3.yaml  opencv_adaboost_4.yaml
ros/radar_tracker/config/trained_model/TrainIndoor_TestOutdoor/: opencv_random_forest_1.yaml  opencv_random_forest_3.yaml  (+1 more)
ros/radar_tracker/data/background/: lab_0_0.xml  lab_0_1.xml  lab_0_2.xml  lab_0_3.xml  lab_0_4.xml  lab_1_0.xml  lab_1_1.xml  lab_1_2.xml  lab_1_3.xml  lab_1_4.xml  lab_2_0.xml  lab_2_1.xml  lab_2_2.xml  lab_2_4.xml  lab_3_0.xml  lab_3_1.xml  lab_3_2.xml  lab_3_3.xml  lab_3_4.xml  pavement_0_0.xml  pavement_0_1.xml  pavement_0_2.xml  pavement_0_3.xml  pavement_0_4.xml  pavement_1_0.xml  pavement_1_1.xml  pavement_1_2.xml  pavement_1_3.xml  pavement_1_4.xml
ros/radar_tracker/data/leg/: 0_1_0_0.xml  0_1_0_1.xml  0_1_0_2.xml  0_1_0_3.xml  0_1_0_4.xml  0_1_1_0.xml  0_1_1_1.xml  0_1_1_2.xml  0_1_1_3.xml  0_1_1_4.xml  indoor_0.xml  indoor_1.xml  indoor_2.xml  indoor_3.xml  indoor_4.xml  outdoor_0.xml  outdoor_1.xml  outdoor_2.xml  outdoor_3.xml  outdoor_4.xml
ros/radar_tracker/data/squat/: 0_1_0_0.xml  0_1_0_1.xml  0_1_0_2.xml  0_1_0_3.xml  0_1_0_4.xml  0_1_1_0.xml  0_1_1_1.xml  0_1_1_2.xml  0_1_1_3.xml  0_1_1_4.xml  indoor_0.xml  indoor_1.xml  indoor_2.xml  indoor_3.xml  indoor_4.xml  outdoor_0.xml  outdoor_1.xml  outdoor_2.xml  outdoor_3.xml  outdoor_4.xml
ros/radar_tracker/launch/: radar_human_tracker.launch
ros/radar_tracker/launch/evaluation/: annotate_detections_radar.launch
ros/radar_tracker/launch/training/: extract_feature_matrix.launch  train_classifier_from_bagfiles.launch
ros/radar_tracker/src/: extract_feature_matrix_node.cpp  human_detector_node.cpp  human_tracker_node.cpp  otsu_filter_node.cpp  train_classifier_node.cpp
ros/radar_tracker/src/extract_feature_matrix_node/: extract_feature_matrix.cpp  extract_feature_matrix.h
ros/radar_tracker/src/human_detector_node/: human_detector.cpp  human_detector.h
ros/radar_tracker/src/human_tracker_node/: human_tracker.cpp  human_tracker.h
ros/radar_tracker/src/otsu_filter_node/: otsu_filter.cpp  otsu_filter.h
ros/radar_tracker/src/train_classifier_node/: train_classifier.cpp  train_classifier.h
ros/tracking_libs/: CMakeLists.txt  package.xml
ros/tracking_libs/include/classifier_lib/: classifier.h
ros/tracking_libs/include/kalman_filter_lib/: extended_kalman_filter.h  hungarian.h  kalman_filter.h  kalman_filter_sh.h  particle_filter.h  unscented_kalman_filter.h
ros/tracking_libs/src/classifier_lib/: classifier.cpp
ros/tracking_libs/src/kalman_filter_lib/: extended_kalman_filter.cpp  hungarian.cpp  kalman_filter.cpp  kalman_filter_sh.cpp  particle_filter.cpp  unscented_kalman_filter.cpp
ros/tracking_msgs/: CMakeLists.txt  package.xml
ros/tracking_msgs/msg/: Leg.msg
(+173 files in other folders)
