<?xml version="1.0"?>
<package>
  <name>laser_squat_leg_tracker</name>
  <version>1.0.0</version>
  <description>The laser_squat_leg_tracker package</description>
  <maintainer email="madischer@igmr.rwth-aachen.de">Nils Mandischer</maintainer>
  <maintainer email="maximilian.hilger@rwth-aachen.de">Maximilian Hilger</maintainer>
  <license>MIT</license>
  <author>Ruikun Hou</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>libfftw3</build_depend>
  <build_depend>rc_tracking_libs</build_depend>
  <build_depend>rc_tracking_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>libfftw3</run_depend>
  <run_depend>rc_tracking_libs</run_depend>
  <run_depend>rc_tracking_msgs</run_depend>


</package>
