<?xml version="1.0"?>
<package>
  <name>leg_fusion</name>
  <version>1.10.0</version>
  <description>The leg_fusion package</description>
  <maintainer email="madischer@igmr.rwth-aachen.de">Nils Mandischer</maintainer>
  <maintainer email="maximilian.hilger@rwth-aachen.de">Maximilian Hilger</maintainer>
  <license>MIT</license>
  <author>Ruikun Hou</author> 
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>bayes_tracking</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rc_tracking_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>bayes_tracking</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rc_tracking_msgs</run_depend>
  
  <export>

  </export>
</package>
