<?xml version="1.0"?>
<package>
    <name>radar_squat_leg_tracker</name>
    <version>0.0.0</version>
    <description>The Radar Human Tracker Framework</description>
   
    <maintainer email="madischer@igmr.rwth-aachen.de">Nils Mandischer</maintainer>
    <maintainer email="maximilian.hilger@rwth-aachen.de">Maximilian Hilger</maintainer>
    <license>MIT</license>

    <author email="ina.koop@rwth-aachen.de">Ina Koop</author>
    <author>Ruikun Hou</author> 
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>


    <build_depend>roscpp</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>object_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl</build_depend>
    <build_depend>rc_tracking_libs</build_depend>
    <build_depend>rc_tracking_msgs</build_depend>
<!--    <build_depend>rviz_visual_tools</build_depend>-->
    <!--
    <build_depend>dynamic_reconfigure</build_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    -->

    <run_depend>roscpp</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>object_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl</run_depend>
    <run_depend>rc_tracking_libs</run_depend>
    <run_depend>rc_tracking_msgs</run_depend>
<!--    <run_depend>rviz_visual_tools</run_depend>-->

    <export>

    </export>
</package>
