<?xml version="1.0"?>
<package format="2">
    <name>rc_tracking_msgs</name>
    <version>1.0.0</version>
    <description>Main messages for tracking in Robot Companion</description>

    <maintainer email="mandischer@igmr.rwth-aachen.de">Nils Mandischer</maintainer>
    <maintainer email="maximilian.hilger@rwth-aachen.de">Maximilian Hilger</maintainer>

    <author email="mandischer@igmr.rwth-aachen.de">Nils Mandischer</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
