<package>
  <name>annotate_rosbags_rviz_plugin</name>
  <version>0.9.0</version>
  <description>
     Tools to annotate rosbags.
  </description>
  <maintainer email="mandischer@rwth-aachen.de">Nils Mandischer</maintainer>
  <maintainer email="maximilian.hilger@rwth-aachen.de">Maximilian Hilger</maintainer>
  <license>MIT</license>

  <author>Ruikun Hou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>

  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
